# md2pdf-resume

./: .gitignore  LICENSE  README.md  generate_resume_pdf.py  pyproject.toml  resume.css  resume_template.md
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-05-06-md2pdf-resume.md
docs/superpowers/specs/: 2026-05-06-md2pdf-resume-design.md
src/md2pdf_resume/: __init__.py  cli.py  config.py  converter.py  html_builder.py  utils.py
src/md2pdf_resume/templates/: default.css  default.md  default_en.md
tests/: test_cli.py  test_config.py  test_converter.py  test_html_builder.py  test_utils.py
