[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "md2pdf-resume"
version = "0.1.0"
description = "Generate PDF resumes from Markdown"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9,<1.0",
    "markdown>=3.5,<4.0",
    "pypdf>=3.0,<5.0",
    "playwright>=1.40,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.3",
    "mypy>=1.8",
    "types-Markdown",
]

[project.scripts]
md2pdf-resume = "md2pdf_resume.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/md2pdf_resume"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
